--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,10 @@
 # .github/workflows/ci.yml
+#
+# CI — линтеры, тесты, покрытие, security (SBOM, Grype/Trivy), REUSE и подпись артефактов
 
-name: CI — lint/pytest/coverage/security
+name: CI — lint/pytest/coverage/security/sign
 
-# Разрешения для CodeQL и security-events
+# Разрешаем Actions читать/писать нужные ресурсы
 permissions:
   actions: read
   contents: read
@@ -10,14 +12,23 @@ permissions:
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
+
+env:
+  # Жестко фиксируем версии Syft/Grype, чтобы не поймать 404 при выходе новых релизов
+  SYFT_VERSION: "0.83.0"
+  GRYPE_VERSION: "0.88.0"
+  TRIVY_VERSION: "0.49.0"   # подгоняйте под актуальную версию в момент чтения
+  COSIGN_VERSION: "2.1.0"   # версия cosign для подписи артефактов
+  # Имя секрета в GitHub Secrets, где хранится приватный ключ cosign
+  COSIGN_KEY_SECRET: "COSIGN_PRIVATE_KEY"
 
 jobs:
-  # ───────────────────────────────────────────────────────────────────────────
+  # ────────────────────────────────────────────────────────────────────────────
   # 1) Линт, форматирование, isort
-  # ───────────────────────────────────────────────────────────────────────────
+  # ────────────────────────────────────────────────────────────────────────────
   lint-format:
     runs-on: ubuntu-latest
     steps:
@@ -45,9 +56,9 @@ jobs:
         run: |
           isort --check-only src tests
 
-  # ───────────────────────────────────────────────────────────────────────────
+  # ────────────────────────────────────────────────────────────────────────────
   # 2) Тесты + покрытие (pytest → upload coverage)
-  # ───────────────────────────────────────────────────────────────────────────
+  # ────────────────────────────────────────────────────────────────────────────
   pytest-coverage:
     needs: lint-format
     runs-on: ubuntu-latest
@@ -84,69 +95,86 @@ jobs:
           name: htmlcov-${{ matrix.python-version }}
           path: htmlcov
 
-  # ───────────────────────────────────────────────────────────────────────────
-  # 3) Security checks: SBOM → Grype/Trivy, reuse-lint, Bandit, Semgrep, CodeQL
-  # ───────────────────────────────────────────────────────────────────────────
-  security-checks:
+  # ────────────────────────────────────────────────────────────────────────────
+  # 3) Security checks + подпись пакетов
+  # ────────────────────────────────────────────────────────────────────────────
+  security-and-sign:
     needs: pytest-coverage
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python 3.13 (для security-утилит)
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.13'
-
-      # ─── 3.1 Устанавливаем системные зависимости и Python-утилиты ──────────────
-      - name: Install system dependencies (Syft, Grype, Trivy) and Python tools
+      ###########################################################################
+      # 3.0 (опционально) — Fetch secrets из Vault (HashiCorp Vault / AWS SM)
+      ###########################################################################
+      - name: Fetch secrets from Vault (пример)
+        if: ${{ false }}  # <- если вы хотите подключить Vault, поставьте true
         run: |
-          sudo apt-get update
-          sudo apt-get install -y curl git unzip
+          # (пример для HashiCorp Vault)
+          # Этот шаг ничего не делает, пока if=false.
+          # Чтобы включить, заведите секрет VAULT_TOKEN в GitHub Secrets.
+          vault login "$VAULT_TOKEN"
+          vault kv get -field=cosign_key secret/data/mypath/cosign > cosign.key
 
-          # Устанавливаем Syft (для генерации SBOM)
-          curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh \
+      ###########################################################################
+      # 3.1 Устанавливаем Syft, Grype, Trivy, Cosign и Python-инструменты
+      ###########################################################################
+      - name: Install system dependencies (Syft, Grype, Trivy, Cosign) and Python tools
+        run: |
+          set -exo pipefail
+
+          # ── Устанавливаем Syft (для генерации SBOM) ───────────────────────────────
+          curl -sSfL https://raw.githubusercontent.com/anchore/syft/v${SYFT_VERSION}/install.sh \
             | sh -s -- -b /usr/local/bin
 
-          # Устанавливаем Grype (для сканирования SBOM)
-          curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh \
+          # ── Устанавливаем Grype (для сканирования SBOM) ───────────────────────────
+          curl -sSfL https://raw.githubusercontent.com/anchore/grype/v${GRYPE_VERSION}/install.sh \
             | sh -s -- -b /usr/local/bin
 
-          # Устанавливаем Trivy (для дополнительного сканирования SBOM)
-          curl -sSfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh \
-            | sudo sh -s -- -b /usr/local/bin
+          # ── Устанавливаем Trivy (для SBOM) ────────────────────────────────────────
+          curl -sSfL https://raw.githubusercontent.com/aquasecurity/trivy/v${TRIVY_VERSION}/contrib/install.sh \
+            | sh -s -- -b /usr/local/bin
 
-          # Устанавливаем Python-утилиты: reuse (лицензии), bandit (security), semgrep (OSS rules)
+          # ── Устанавливаем Cosign (для подписи артефактов) ─────────────────────────
+          curl -sSfL https://github.com/sigstore/cosign/releases/download/v${COSIGN_VERSION}/cosign-linux-amd64 \
+            -o /usr/local/bin/cosign
+          chmod +x /usr/local/bin/cosign
+
+          # ── Python-утилиты: reuse (лицензии), bandit (security), semgrep (OSS rules) ─
           pip install reuse bandit semgrep
 
-      # ─── 3.2 Генерация SBOM и скан на уязвимости ───────────────────────────────
+      ###########################################################################
+      # 3.2 Генерация SBOM и сканирование (Grype + Trivy)
+      ###########################################################################
       - name: Generate SBOM (Syft)
         run: |
           syft . -o cyclonedx-json=sbom.json
 
-      - name: Scan SBOM with Grype (fail on high+critical severity)
+      - name: Scan SBOM with Grype (fail on HIGH+CRITICAL)
         run: |
           grype sbom:sbom.json --fail-on high
         continue-on-error: true
-        # — Если Grype найдёт «high» или «critical», этот шаг завершится с ошибкой, но весь job не упадёт (continue-on-error).
+        # ── Если найдены уязвимости с severity ≥ HIGH, шаг вернёт ненулевой код, но job продолжится.
 
       - name: Save Grype report (JSON)
         run: |
           grype sbom:sbom.json -o json > grype-report.json || true
 
-      - name: Scan SBOM with Trivy
+      - name: Scan SBOM with Trivy (HIGH+CRITICAL)
         run: |
-          trivy sbom --format json --output trivy-report.json sbom.json || true
-        # — Trivy сканирует весь SBOM. «high/critical» уязвимости отразятся в trivy-report.json,
-        #   но благодаря "|| true" шаг не провалит весь job.
+          # Обратите внимание: в более новых версиях Trivy синтаксис:
+          # trivy sbom --format json --exit-code 1 --severity HIGH,CRITICAL sbom.json
+          trivy sbom --format json --exit-code 1 --severity HIGH,CRITICAL sbom.json \
+            | tee trivy-report.json || true
 
-      # ─── 3.3 Проверка лицензий REUSE (reuse-lint) ───────────────────────────────
+      ###########################################################################
+      # 3.3 Лицензии (REUSE) и статический анализ
+      ###########################################################################
       - name: REUSE lint (license compliance)
         run: |
-          reuse lint > reuse-report.txt || true
+          reuse lint || true
 
-      # ─── 3.4 Static analysis: Bandit, Semgrep ───────────────────────────────────
       - name: Bandit (security linter)
         run: |
           bandit -r src -f json -o bandit-report.json || true
@@ -155,7 +183,9 @@ jobs:
         run: |
           semgrep --config p/ci --sarif-output=semgrep-report.sarif || true
 
-      # ─── 3.5 CodeQL analysis ───────────────────────────────────────────────────
+      ###########################################################################
+      # 3.4 CodeQL analysis
+      ###########################################################################
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
@@ -167,8 +197,26 @@ jobs:
       - name: Run CodeQL analysis
         uses: github/codeql-action/analyze@v3
 
-      # ─── 3.6 Загрузка артефактов security-отчетов ───────────────────────────────
-      - name: Upload SBOM artifact
+      ###########################################################################
+      # 3.5 Сборка Python-пакета и подпись через Cosign
+      ###########################################################################
+      - name: Build Python package (wheel & sdist)
+        run: |
+          python -m build --sdist --wheel --outdir dist
+
+      - name: Sign artifacts with Cosign
+        env:
+          COSIGN_PASSWORD: ${{ secrets.COSIGN_KEY_SECRET }}
+        run: |
+          # Пример: подписание всех колёс и sdist
+          for artifact in dist/*.whl dist/*.tar.gz; do
+            cosign sign --key cosign.key "$artifact"
+          done
+
+      ###########################################################################
+      # 3.6 Upload security‐artifacts и подписи
+      ###########################################################################
+      - name: Upload SBOM (CycloneDX JSON)
         uses: actions/upload-artifact@v4
         with:
           name: sbom-json
@@ -203,3 +251,13 @@ jobs:
         with:
           name: semgrep-report
           path: semgrep-report.sarif
+
+      - name: Upload Python‐artifacts & signatures
+        uses: actions/upload-artifact@v4
+        with:
+          name: signed-pypi-artifacts
+          path: |
+            dist/*.whl
+            dist/*.tar.gz
+            dist/*.whl.sig
+            dist/*.tar.gz.sig
